--- a/_body.scss
+++ b/_body.scss
@@ -321,17 +321,33 @@ body {
 
 
         .About {
-
+            .maxwidth {
+                @media screen and (max-width: $sp) {
+                    padding: 0;
+                }
+            }
 
 
             .about-content {
                 position: relative;
             }
 
-            .display {
+            .display2 {
+                display: flex;
                 align-items: center;
                 justify-content: space-between;
+                padding: 10px;
+                margin: auto;
+
+                @media screen and (max-width: $sp) {
+                    display: flex;
+                    flex-direction: column-reverse;
+                }
+
             }
+
+
+
 
             .aboutimg {
                 width: 35.536603%;
@@ -347,102 +363,110 @@ body {
                 font-weight: 700;
             }
 
-            .display {
+            // .display {
+
+
+
+            .display3 {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                padding: 10px;
+                margin: auto;
                 @media screen and (max-width: $sp) {
                     display: block;
                 }
+            }
 
-                .displayorder {
-                    display: flex;
-                }
+            .About-img1 {
+                width: 100%;
+                margin-top: 33px;
+                box-shadow: 25px 25px #F9C83B;
 
-                .About-img1 {
-                    width: 100%;
-                    margin-top: 33px;
-                    box-shadow: 25px 25px #F9C83B;
-
-                    @media screen and (max-width: $sp) {
-                        order: 2;
-                        box-shadow: none;
-                        border: solid #F9C83B;
-                        border-width: 0 20px 20px 0;
-                    }
-
-                }
-
-                .About-img2 {
-                    width: 100%;
-                    margin-top: 28px;
-                    box-shadow: -25px 25px #FFF835;
-
-                    @media screen and (max-width: $sp) {
-                        box-shadow: none;
-                        border: solid #FFF835;
-                        border-width: 0 20px 20px 0;
-                    }
-                }
-
-
-                .textblock {
-                    display: block;
-                    z-index: 2;
-
-                    @media screen and (max-width: $sp) {
-                        padding: 5% 12%;
-                        // line-height: 17px;
-                    }
-                }
-
-                .txtblock1,
-                .txtblock2 {
-                    @media screen and (max-width: $sp) {
-                        background-image: url(../../img/bg_01.png);
-                        background-repeat: no-repeat;
-                        background-size: cover;
-                        background-origin: content-box;
-                        width: 81.81818182%;
-                    }
-                }
-
-
-                .AboutText {
-                    margin-bottom: 47px;
-                    font-size: 34px;
-
-                    @media screen and (max-width: $sp) {
-                        font-size: 20px;
-                        order: 1;
-                        margin-bottom: 10px;
-                    }
-                }
-
-                .AboutText-content {
-                    font-size: 21px;
-
-                    @media screen and (max-width: $sp) {
-                        font-size: 18px;
-
-                    }
-                }
-
-                .textcontent1 {
-                    @media screen and (max-width: $sp) {
-                        order: 3;
-                    }
-                }
-
-                .txtblock2 {
-                    @media screen and (max-width: $sp) {
-                        margin-top: 20px;
-                    }
+                @media screen and (max-width: $sp) {
+                    box-shadow: none;
+                    border: solid #F9C83B;
+                    border-width: 0 20px 20px 0;
                 }
 
             }
+
+            .About-img2 {
+                width: 100%;
+                margin-top: 28px;
+                box-shadow: -25px 25px #FFF835;
+
+                @media screen and (max-width: $sp) {
+                    box-shadow: none;
+                    border: solid #FFF835;
+                    border-width: 0 20px 20px 0;
+                }
+            }
+
+
+            .textblock {
+                display: block;
+                z-index: 4;
+
+
+                @media screen and (max-width: $sp) {
+                    margin: auto;
+                    // padding: 5% 12%;
+                    // line-height: 17px;
+                }
+            }
+
+            .txtblock1,
+            .txtblock2 {
+                @media screen and (max-width: $sp) {
+                    background-image: url(../../img/bg_01.png);
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    background-origin: content-box;
+                    // width: 81.81818182%;
+                    width: 85%;
+                }
+            }
+
+
+            .AboutText {
+                margin-bottom: 47px;
+                font-size: 34px;
+
+                @media screen and (max-width: $sp) {
+                    font-size: 20px;
+                    margin-bottom: 10px;
+                }
+            }
+
+            .AboutText-content {
+                font-size: 21px;
+
+                @media screen and (max-width: $sp) {
+                    font-size: 18px;
+
+                }
+            }
+
+            .textcontent1 {
+                @media screen and (max-width: $sp) {
+                    order: 3;
+                }
+            }
+
+            .txtblock2 {
+                @media screen and (max-width: $sp) {
+                    margin-top: 20px;
+                }
+            }
+
+            // }
 
             // about模様ここから
             // .about-pattern {
             .pattern {
                 position: absolute;
+                z-index: 3;
 
                 @media screen and (max-width: $sp) {
                     display: none;
