--- a/_header.scss
+++ b/_header.scss
@@ -100,7 +100,8 @@ header {
 }
 
 .menu-content ul {
-    padding: 70px 10px 0;
+padding: 80px 30px;
+    background-color: rgba(16,69,153,.8);
 }
 
 .menu-content li {
